soled free code camp problems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "editor.fontSize": 13,
-    "editor.tabSize": 3,
-    "editor.formatOnType": true,
-    "editor.experimentalInlineEdit.showToolbar": "onHover"
+  "editor.fontSize": 13,
+  "editor.tabSize": 3,
+  "editor.formatOnType": true,
+  "editor.experimentalInlineEdit.showToolbar": "onHover",
+  "liveServer.settings.port": 5501
 }
